fixing margin of goals table on mobile

--- a/src/main/resources/static/css/view-activity.css
+++ b/src/main/resources/static/css/view-activity.css
@@ -651,7 +651,7 @@ justify-content: center;
     .goal-table{
         margin-top:30px !important;
         width:350px !important;
-        margin-left: unset !important;
+        margin-left: 10% !important;
     }
 
 
